# neural-context-protocol

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
.ncp/: config.toml.example
benchmarks/: __init__.py
benchmarks/coding_pipeline/: README.md  run.py
benchmarks/compression/: __init__.py  run.py
benchmarks/crosshost/: __init__.py  run.py
benchmarks/efficacy/: TEMPLATE.json  __init__.py  run.py
benchmarks/mace/: README.md  __init__.py  config.yaml  run.py
benchmarks/mace/dimensions/: __init__.py  d1_token_efficiency.py  d2_handoff_quality.py  d3_deadend_prevention.py  d4_goal_coherence.py
benchmarks/mace/fixtures/: task_decompose.json  task_goalchange.json
benchmarks/mace/harness/: __init__.py  agents.py  baseline.py  pipeline.py  scoring.py
benchmarks/mace/results/community/: TEMPLATE.json
benchmarks/needle/: __init__.py  run.py
benchmarks/research_pipeline/: README.md  run.py
benchmarks/retrieval/: __init__.py  run.py
benchmarks/task_success/: __init__.py  run.py  tasks.py
docs/: NCP_0_2_0_HANDOFF_PACKET.md  NCP_ACTIVE_HANDOFF_PACKET.md  NCP_BENCHMARK_CODING_PIPELINE.md  NCP_BENCHMARK_COMPRESSION.md  NCP_BENCHMARK_MATCHED_BUDGET_EFFICACY.md  NCP_BENCHMARK_NEEDLE_RECALL.md  NCP_BENCHMARK_RESEARCH_PIPELINE.md  NCP_BENCHMARK_TASK_SUCCESS.md  NCP_CREDIBILITY_EXECUTION_PLAN.md  NCP_HTTP_API.md  NCP_MCP_DOGFOOD_LOOP.md  NCP_OPTIMIZATION_PLAN.md  NCP_POST_V1_ROADMAP.md  NCP_PROTOCOL_SPEC.md  NCP_PROVIDER_PARITY_BASELINE.md  NCP_R2_STORAGE.md  NCP_SETUP.md  NCP_V1_RELEASE_CANDIDATE_PLAN.md  NCP_V1_RELEASE_CHECKLIST.md
docs/articles/x-ncp-v1.1/: article.md
docs/specs/: 2026-05-27-ncp-060-streaming-design.md  2026-05-28-ivfflat-migration-design.md
examples/: 01_quickstart.py  02_multi_agent.py
examples/03_langgraph/: README.md  pipeline.py  run.py
examples/06_claude_code/: CLAUDE.md  README.md  mcp_servers.json  settings.json
examples/06_claude_code/hooks/: ncp-session-start.sh
examples/06_claude_code/skills/ncp/: SKILL.md
examples/07_codex_cli/: AGENTS.md  README.md  hooks.json  mcp_servers.json
examples/07_codex_cli/hooks/: ncp-session-start.sh
examples/08_n8n/: README.md  ncp_turn_workflow.json
examples/09_opencode/: AGENTS.md  README.md  opencode.json
examples/09_opencode/plugins/: ncp.js
examples/10_omnigent/: .env.example  README.md  mcp_servers.json
ncp/: __init__.py  agent_handoff.py  api.py  assembler.py  batch.py  benchmarks.py  chunker.py  claude_review_helper.py  cli.py  coherence.py  config.py  costs.py  demo.py  dogfood.py  encoder.py  identity.py  tokens.py  types.py
ncp/adapters/: __init__.py  anthropic.py  base.py  cohere.py  cursor.py  embedding.py  gemini.py  local.py  mistral.py  ollama.py  openai.py
ncp/bench/: __init__.py  baselines.py
ncp/hooks/: __init__.py
ncp/mcp/: server.py
ncp/middleware/: __init__.py  base.py  cost_tracking.py  logging.py
ncp/migrations/: 001_initial_schema.sql  002_add_retrieval_tracking.sql  003_add_embedding_column.sql  004_add_ivfflat_index.sql  005_add_dissent_tracking.sql  006_add_identity_reputation.sql  __init__.py
ncp/stores/: __init__.py  base.py  calibration.py  consolidation.py  factory.py  migrations.py  pgvector.py  pgvector_async.py  redis.py  redis_coordination.py  rerank.py  retrieval.py  sqlite.py
ncp/templates/: config.toml.example
ncp/templates/provider_hooks/claude/: mcp_servers.json
ncp/templates/provider_hooks/claude/hooks/: ncp-session-start.sh
ncp/templates/provider_hooks/claude/skills/ncp/: SKILL.md
ncp/templates/provider_hooks/codex/: AGENTS.md
ncp/templates/provider_hooks/codex/hooks/: ncp-session-start.sh
ncp/templates/provider_hooks/opencode/: opencode.json
ncp/templates/provider_hooks/opencode/plugins/: ncp.js
scripts/: claude_partner.py  claude_review_stream.py  dev_up.sh  infra_down.sh  infra_up.sh  ncp_ensure_serve.sh  opencode_reviewer.py  release_preflight.sh  test_pgvector_integration.sh
tests/: test_adapters.py  test_agent_handoff.py  test_api.py  test_assembler.py  test_assembler_incremental.py  test_assembler_k_forwarding.py  test_assembler_phase3.py  test_async_auto_embed_retrieval.py  test_async_calibrate.py  test_async_consolidate.py  test_async_pgvector_dedup_gc.py  test_async_pgvector_store.py  test_async_redis_coordination.py  test_async_retrieval_mode_validation.py  test_async_vector_mode.py  test_baselines.py  test_batch.py  test_benchmark_compression.py  test_benchmarks.py  test_calibration.py  test_chunker.py  test_claude_review_helper.py  test_cli.py  test_coherence.py  test_config.py  test_consolidation.py  test_costs.py  test_crosshost.py  test_decision_trace.py  test_dissent_feedback.py  test_diversity_limit.py  test_diversity_limit_forwarding.py  test_dogfood.py  test_edge_expansion.py  test_efficacy.py  test_embedding_adapter.py  test_embedding_ann.py  test_encoder.py  test_enhancements.py  test_examples.py  (+26 more)
