[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-context-protocol"
version = "1.0.4"
description = "Neural Context Protocol (NCP): bounded, persistent context for multi-agent pipelines."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "kulkarni2u" }]
license = "MIT"
keywords = ["mcp", "agents", "multi-agent", "context", "memory", "sqlite", "llm", "protocol"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "pydantic>=2.7",
  "rank-bm25>=0.2.2",
  "click>=8.1",
  "rich>=13.0",
  "httpx>=0.27",
  "anyio>=4.3",
  "orjson>=3.10",
  "structlog>=24.0",
]

[project.urls]
Homepage = "https://github.com/kulkarni2u/neural-context-protocol"
Repository = "https://github.com/kulkarni2u/neural-context-protocol"
Issues = "https://github.com/kulkarni2u/neural-context-protocol/issues"
Changelog = "https://github.com/kulkarni2u/neural-context-protocol/blob/main/CHANGELOG.md"

[project.optional-dependencies]
providers = [
  "anthropic",
  "openai",
  "google-genai",
  "mistralai",
  "cohere",
]
tokens = ["tiktoken>=0.7"]
http = ["aiohttp"]
redis = ["redis"]
pgvector = ["psycopg[binary]", "psycopg-pool", "pgvector"]
all = [
  "anthropic",
  "openai",
  "google-genai",
  "mistralai",
  "cohere",
  "tiktoken>=0.7",
]
dev = [
  "build",
  "pytest",
  "pytest-asyncio",
  "pytest-httpx",
  "pytest-cov",
  "ruff",
  "mypy",
  "tiktoken>=0.7",
]

[project.scripts]
ncp = "ncp.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["ncp*"]

[tool.setuptools.package-data]
ncp = ["templates/*.example", "migrations/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
